--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.14",
+        "autoprefixer": "^10.4.15",
         "axios": "^1.1.2",
+        "flowbite": "^1.8.1",
         "laravel-vite-plugin": "^0.7.5",
-        "postcss": "^8.4.27",
+        "postcss": "^8.4.28",
         "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
     }
